<resources>
    <string name="app_name">Capstone</string>
    <string name="pw">비밀번호</string>
    <string name="pw_pass">비밀번호 확인</string>
    <string name="email">이메일</string>
    <string name="login">보호자 로그인</string>
    <string name="id_pw">피보호자 로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="name">닉네임</string>
    <string name="protector">보호자(피보호자로 가입하는 경우만 작성)</string>
    <string name="ward">인증코드</string>
    <string name="duplicate">인증메일 발송</string>
    <string name="registration_method">사용자 등록 방법</string>
    <string name="method">앱 이용 방법</string>
    <string name="using">앱 사용하기➔</string>
    <string name="bulletin_board">자유게시판</string>
    <string name="now">현재시간:</string>
    <string name="registration_m">사용자 등록 방법</string>
    <string name="methodOfUse">앱 사용 방법</string>
    <string name="setting">설정</string>
</resources>