<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/sonaji"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:src="@drawable/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/reg_met"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="150dp"
        android:ems="100"
        android:gravity="center"
        android:text="@string/registration_method"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:backgroundTint="#FFCECE"
        app:layout_constraintEnd_toEndOf="@+id/sonaji"
        app:layout_constraintStart_toStartOf="@+id/sonaji"
        app:layout_constraintTop_toTopOf="@+id/sonaji" />

    <Button
        android:id="@+id/met"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:ems="100"
        android:text="@string/method"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:backgroundTint="#FFCECE"
        app:layout_constraintEnd_toEndOf="@+id/reg_met"
        app:layout_constraintStart_toStartOf="@+id/reg_met"
        app:layout_constraintTop_toTopOf="@+id/reg_met"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:text="@string/using"
        android:textColor="@color/black"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>