<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--타이틀-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/sonaji"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="100dp"
                android:background="@null"
                android:src="@drawable/main" />

        </LinearLayout>

        <!--하단-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

<!--            로그인-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <!--이메일-->
                <EditText
                    android:id="@+id/login_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/email"
                    android:autofillHints="no" />

                <!--비밀번호-->
                <EditText
                    android:id="@+id/login_pw"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/pw"
                    android:autofillHints="no" />

            </LinearLayout>

<!--            추가정보-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="#FFFFFF"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <LinearLayout
                            android:id="@+id/LinearLayoutLogin"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.3"
                            android:orientation="horizontal">

                            <!--로그인-->
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/login"
                                android:textColor="@color/black" />
                        </LinearLayout>
                        <View
                            android:layout_width="3dp"
                            android:layout_height="match_parent"
                            android:background="#673AB7" />
                        <!--아이디/비밀번호 찾기-->
                        <LinearLayout
                            android:id="@+id/LoginAsWard"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/id_pw"
                                android:textColor="@color/black" />
                        </LinearLayout>
                        <View
                            android:layout_width="3dp"
                            android:layout_height="match_parent"
                            android:background="#673AB7" />
                        <!--회원가입-->
                        <LinearLayout
                            android:id="@+id/LinearLayoutJoin"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.3"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/sign_up"
                                android:textColor="@color/black" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>